kubernetes/mesh-istio-bluegreen/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-istio-bluegreen
spec:
  hosts:
    - mesh-istio-bluegreen.pipecd.dev
  gateways:
    - mesh-istio-bluegreen
  http:
    - route:
      - destination:
          host: mesh-istio-bluegreen
          subset: primary
        weight: 100
      - destination:
          host: mesh-istio-bluegreen
          subset: canary
        weight: 0
      - destination:
          host: mesh-istio-bluegreen
          subset: baseline
        weight: 0
